--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 
         <ul id="main-nav" class="nav fl">
             <li class="{% if page.title == 'Reclaim Your Domain' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/index.html" title="Home">Home</a></li>
-            <li class="{% if page.title == 'Map' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/index.html" title="Map">Map</a></li>
+            <li class="{% if page.title == 'Map' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/map.html" title="Map">Map</a></li>
          </ul>
         
         <ul class="rss fr">
