--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,7 @@
-<a href="https://github.com/reclaim-your-domain/kin-lane-reclaim-your-domain"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 <div id="wrapper">
     
      <div id="header" class="col-full">
-        <div id="logo"><a href="http://apievangelist.com" title=""><img src="https://s3.amazonaws.com/kinlane-productions/reclaimyourdomain/reclaim-your-domain-logo.png" width="350" /></a></div> 
+        <div id="logo"><a href="http://recalimyourdomain.org" title=""><img src="https://s3.amazonaws.com/kinlane-productions/reclaimyourdomain/reclaim-your-domain-logo.png" width="350" /></a></div> 
         
     </div>
     
@@ -16,7 +15,7 @@
         <ul class="rss fr">
             
             <li class="sub-rss" style="padding-top: 5px;">         
-                <a href="http://apievangelist.com" title="Home" style="color:#000;">Return to API Evangelist >></a>
+                <a href="http://reclaimyourdomain.org" title="Home" style="color:#000;">Return to Reclaim Your Domain >></a>
             </li>          
         </ul>
 
